@@ -310,6 +310,9 @@ Kazutoshi Satoda for contributing to this release.
 - Replaced the links to Java 5 documentation with links to Java 6 documentation
   (Björn "Vampire" Kautler)
 
+- Made the Windows installer correctly show special characters like german
+  umlauts (Björn "Vampire" Kautler)
+
 - Made the filter tasks use UTF-8 encoding as all our files are UTF-8 encoded
   (Björn "Vampire" Kautler)
 
